change uploadImageToImageLibs to uploadImageToOrder

--- a/template/manage_image.html
+++ b/template/manage_image.html
@@ -14,7 +14,8 @@
     </head>
     <body class="manage_image">
         <div class="page">
-        <input type="hidden" id="cusInfo_id" value="<%=id%>">
+        <input type="hidden" id="cusInfo_id" value="<%=cusInfoId%>">
+        <input type="hidden" id="order_id" value="<%=orderId%>">
         <% include lib/toplink%>
         <% include lib/nav %>
         <div class="right_area">
