--- a/public/css/order_page.css
+++ b/public/css/order_page.css
@@ -1,3 +1,4 @@
+.content{width:808px;}
 .product{
     width:800px;
     height:400px;
@@ -130,4 +131,73 @@
     font-size:12px;
     border:1px solid #ddd;
     border-radius:3px;
+}
+.orderList{
+    width:100%;
+}
+.orderList li:hover{
+    background:#efefef;
+}
+.orderList li{
+    float:left;
+    width:100%;
+    height:30px;
+    line-height:30px;
+    border-bottom:1px solid #ddd;
+}
+.orderList .date{
+    float:left;
+    width:120px;
+}
+.orderList .progress{
+   width:380px; 
+   float:left;
+   margin-top:5px;
+}
+.orderList .progress div.active{
+    background:green;
+}
+.orderList .progress div{
+    font-size:12px;
+    border-radius:5px;
+    float:left;
+    padding:0 5px;
+    margin:0 5px;
+    height:20px;
+    line-height:20px;
+    background:#999;
+    color:#fff;
+}
+.orderList .playBox{
+    float:right;
+}
+.orderList .playBox a{
+    margin:0 3px;
+}
+.createOrderBox{
+    width:100%; 
+    color:#333;
+}
+.createOrderBox li{
+    width:100%;
+    margin:5px 0;
+    float:left;
+}
+.createOrderBox .key{
+    padding-right:5px;
+    text-align:right;
+    float:left;
+    width:80px;
+}
+.createOrderBox .infoBox{
+    width:400px;
+    float:left;
+}
+.createOrderBox .remarks{
+    width:450px;
+    height:160px;
+}
+.createOrderBox .submit{
+    float:right;
+    margin-right:22px;
 }
