--- a/public/css/album.css
+++ b/public/css/album.css
@@ -33,6 +33,12 @@
     margin-top:5px;
     visibility:hidden;
 }
+.photo:hover img{
+    animation: shake .3s;
+    -moz-animation: shake .3s; /* Firefox */
+    -webkit-animation: shake .3s;  /* Safari 和 Chrome */
+    -o-animation: shake .3s;
+}
 .photo:hover .nameBox{
     visibility:visible;
 }
@@ -40,7 +46,19 @@
 .photo .nameBox .delete:hover{
     color:#333;
 }
-.photo .nameBox .download,
+
+@keyframes shake{
+    0%   {opacity:0.1;-webkit-transform:rotate(-5deg);}
+    100% {opacity:1;-webkit-transform:rotate(-5deg);}
+}
+@-webkit-keyframes shake /* Safari 和 Chrome */ {
+    0%   {-webkit-transform:rotate(-0.8deg);}
+    20%{-webkit-transform:rotate(0.6deg);}
+    40%{-webkit-transform:rotate(-0.6deg);}
+    60%{-webkit-transform:rotate(0.3deg);}
+    80%{-webkit-transform:rotate(-0.3deg);}
+    100% {-webkit-transform:rotate(0.1deg);}
+}photo .nameBox .download,
 .photo .nameBox .delete{
     width: 14px;
     height: 14px;
