--- a/public/css/order_page.css
+++ b/public/css/order_page.css
@@ -138,41 +138,111 @@
 .orderList li:hover{
     background:#efefef;
 }
+.orderList .progress:hover .tt{
+   animation: aniTT.3s;
+   -moz-animation: aniTT .3s;
+   -webkit-animation: aniTT .3s;
+   -o-animation: aniTT .3s;
+    display:block;
+}
+.orderList .progress:hover{
+   animation: progress .3s;
+   -moz-animation: progress .3s;
+   -webkit-animation: progress .3s;
+   -o-animation: progress .3s;
+    margin-top:5px;
+}
+@keyframes aniTT{
+    0%   {margin-top:-10px;opacity:0.1;}
+    100% {margin-top:5px;opacity:1;}
+}
+@-webkit-keyframes aniTT/* Safari 和 Chrome */ {
+    0%   {margin-top:-10px;opacity:0.1;}
+    100% {margin-top:5px;opacity:1;}
+}
+@keyframes progress{
+    0%   {margin-top:13px;}
+    100% {margin-top:5px;}
+}
+@-webkit-keyframes progress/* Safari 和 Chrome */ {
+    0%   {margin-top:13px;}
+    100% {margin-top:5px;}
+}
 .orderList li{
     float:left;
     width:100%;
-    height:30px;
+    height:50px;
     line-height:30px;
     border-bottom:1px solid #ddd;
 }
 .orderList .date{
+    line-height:50px;
     float:left;
-    width:120px;
+    width:110px;
+    padding-left:10px;
 }
 .orderList .progress{
    width:380px; 
+    height:35px;
    float:left;
+   margin-top:14px;
+   position:relative;
+}
+.orderList .progress .point.active{
+    color:#456590;
+    background:#fff;
+    font-size:20px;
+    text-align:center;
+}
+.orderList .progress .barBGa,
+.orderList .progress .barBGb{
+    position:absolute;
+    height:10px;
+    width:100px; 
+    background:#FD8A3D;
+    top: 5px;
+    left: 24px;
+}
+.orderList .progress .barBGb{
+    width:100%;
+    width:300px;
+    background:#ddd;
+}
+.orderList .progress .tt{
+    display:none;
+   position:absolute; 
+   color:#333;
+   width:60px;
    margin-top:5px;
-}
-.orderList .progress div.active{
-    background:green;
-}
-.orderList .progress div{
+   margin-left:-20px;
     font-size:12px;
-    border-radius:5px;
+}
+.orderList .progress .point{
+    position:relative;
+    z-index:10;
     float:left;
-    padding:0 5px;
-    margin:0 5px;
-    height:20px;
     line-height:20px;
-    background:#999;
+    text-align:center;
     color:#fff;
+    width:20px;
+    height:20px;
+    background:#999;
+    font-size:12px;
+    border-radius:10px;
+    margin:0 20px;
 }
 .orderList .playBox{
     float:right;
+    margin-right:10px;
+}
+.orderList .playBox a:hover{
+    color:#333;
 }
 .orderList .playBox a{
     margin:0 3px;
+    line-height:50px;
+    color:#999;
+    text-decoration:none;
 }
 .createOrderBox{
     width:100%; 
