--- a/template/login.html
+++ b/template/login.html
@@ -27,7 +27,7 @@
                 <p><label>密码</label><a href="/forget" class="rightLink">忘记密码？</a></p>
                 <p><input id="pass" class="text" type="password" /></p>
                 <p class="btnBox">
-                    <input class="btnBlue" type="button" id="login" value="登 录" />
+                    <input class="btn btn-primary" type="submit" id="login" value="登 录" />
                 </p>
                 <p class="authBox"><a class="qq_login" href="/qqlogin">QQ账号登陆</a></p>
             </form>
