--- a/template/lib/header.ejs
+++ b/template/lib/header.ejs
@@ -1,8 +1,20 @@
 <title><%=title%></title>
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+<!-- Bootstrap -->
+<link href="/css/lib/bootstrap.min.css" rel="stylesheet">
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="/js/lib/jquery-1.10.2.min.js"></script>
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+<script src="/js/lib/html5shiv.js"></script>
+<script src="/js/lib/respond.min.js"></script>
+<![endif]-->
+
 <link href="/css/vendor/font-awesome.min.css?v=<%=css_version%>" rel="stylesheet">
 <link href="/css/common.css?v=<%=css_version%>" rel="stylesheet">
 <script src="/js/vendor/jquery-1.9.0rc1.js?v=<%=js_version%>"></script>
+
 <%if(locals.P_css){%>
     <link href="/css/<%=P_css+".css"%>?v=<%=css_version%>" rel="stylesheet">
 <%}%>
