--- a/template/login.html
+++ b/template/login.html
@@ -22,7 +22,7 @@
         <div class="content">
             <form class="infoBox" >
                 <p class="alert"></p>
-                <p><label>用户名</label><a href="/register" class="rightLink">注册账户</a></p>
+                <p><label>用户名:</label><a href="/register" class="rightLink">注册账户</a></p>
                 <p><input id="username" class="text"/></p>
                 <p><label>密码</label><a href="/forget" class="rightLink">忘记密码？</a></p>
                 <p><input id="pass" class="text" type="password" /></p>
